tweak the utils

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1284,10 +1284,11 @@ select.fixedtinier {
 }
 
 select.fixedsmaller {
-	width     : 123px;
-	font-size : 100%;
-	margin    : 0;
-	padding   : 0;
+	width        : 123px;
+	font-size    : 100%;
+	margin       : 0;
+	padding      : 0;
+	padding-left : 8px;
 }
 
 select.fixedsmall {
