--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3175,6 +3175,17 @@ a.buttonwhite.smaller {
 	font-weight: normal;
 }
 
+a.buttonwhite.fa-sm.thinner,
+.buttonwhite.fa-sm.thinner,
+span.buttonwhite.fa-sm.thinner,
+span.buttonwhite.fa-sm.thinner:hover {
+	font-size   : 11pt;
+	font-weight : 400;
+	padding       : 3px !important;
+	padding-left  : 4px !important;
+	padding-right : 4px !important;
+}
+
 .buttonwhite.thinner,
 .buttonwhite.thinner:hover,
 .buttonwhite.thinner.invert {
