Brushed up the judge display stuff

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1091,6 +1091,19 @@ span.halffixedflex,
 	align-items     : right;
 }
 
+.judgeheight {
+	height        : 25px !important;
+	margin        : 0 !important;
+	padding       : 0 !important;
+	overflow      : hidden;
+	line-height   : 24px;
+	border-bottom : 1px solid #eee;
+}
+
+.judgeheight div, .judgeheight .span {
+    vertical-align : middle;
+	line-height: 22px;
+}
 .judgefixedheight {
 	height: 20px !important;
 }
@@ -4512,6 +4525,12 @@ div.main span.half.smidge, div.main span span.half.smidge {
 
 .twenty {
 	width   : 5%;
+	margin  : 0;
+	padding : 0;
+}
+
+.ninetyfive {
+	width   : 95%;
 	margin  : 0;
 	padding : 0;
 }
