--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4140,14 +4140,11 @@ form {
 }
 
 .statusbox {
-	min-height      : 165px;
+	min-height      : 164px;
 	width           : 212px;
 	max-width       : 212px;
 	margin-top      : 2px;
 	border          : 1px solid #777 !important;
-	display         : inline-flex !important;
-	flex-direction  : column;
-	justify-content : space-between;
 	vertical-align  : top !important;
 	background      : #fcfcfc;
 }
@@ -5229,6 +5226,13 @@ a.fa p {
 p.huge {
 	line-height: 1.5em;
 	font-size: 140%;
+}
+
+div.huge,
+span.huge,
+div.huge span,
+span.huge span {
+	font-size: 144%;
 }
 
 p.bigger {
