Pools interface revamp.  Schedule much faster.  Pools now include a standby creator tab.  Standby pools filtered from main.  Standby blastable and free blastable too.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5933,6 +5933,10 @@ li.smallish {
   white-space : nowrap;
 }
 
+.chosen-search-input {
+	width : 99% !important;
+}
+
 .chosen-container-single .chosen-search input[type="text"] {
 	-webkit-box-sizing : border-box;
 	-moz-box-sizing    : border-box;
@@ -6325,7 +6329,7 @@ span.inline.hidden,
 }
 
 td.cellmax{
-	max-width: 48px;
+	max-width: 96px;
 }
 
 .wordwrap{
