A much improved Districts survey setup

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4520,7 +4520,7 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	width : 61%;
 }
 
-.twenty {
+.twentieth, .twenty {
 	width   : 5%;
 	margin  : 0;
 	padding : 0;
