--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -658,6 +658,11 @@ p.taller {
 	line-height   : 1.8em;
 }
 
+p.shorter {
+	margin-top    : 4px;
+	margin-bottom : 4px;
+	line-height   : 1.2em;
+}
 
 ol {
 	list-style  : decimal;
