because I just do not care enough about fonts

--- a/client/public/fonts/fonts.css
+++ b/client/public/fonts/fonts.css
@@ -49,32 +49,6 @@
 }
 
 @font-face {
-  font-family : 'Raleway';
-  font-style  : normal;
-  font-weight : 400;
-  src         :  url('raleway/Raleway-Regular.woff');
-}
-
-@font-face {
-  font-family : 'Raleway';
-  font-style  : italic;
-  font-weight : 400;
-  src         :  url('raleway/Raleway-Italic.woff');
- }
-@font-face {
-  font-family : 'Raleway';
-  font-style  : normal;
-  font-weight : 700;
-  src         : url('raleway/Raleway-Bold.woff');
-}
-@font-face {
-  font-family : 'Raleway';
-  font-style  : normal;
-  font-weight : 900;
-  src         : url('raleway/Raleway-Black.woff');
-}
-
-@font-face {
     font-family : 'Inconsolata';
     src         : url('inconsolata/Inconsolata-webfont.woff') format('woff'),
 				  url('inconsolata/Inconsolata-webfont.ttf') format('truetype');
@@ -83,108 +57,72 @@
 }
 
 @font-face {
-	font-family : 'Agenda-Light';
+	font-family : 'Signika-ExtraLight';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-Light'), url('agenda/agenda-light.woff') format('woff');
+	src         : local('Signika-ExtraLight'), url('signika/Signika-ExtraLight.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-MediumCondensed';
+	font-family : 'Signika-Light';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-MediumCondensed'), url('agenda/agenda-mediumcondensed.woff') format('woff');
+	src         : local('Signika-Light'), url('signika/Signika-Light.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-Black';
+	font-family : 'Signika';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-Black'), url('agenda/agenda-black.woff') format('woff');
+	src         : local('Signika'), url('signika/Signika-Regular.ttf') format('truetype');
+}
+@font-face {
+	font-family : 'Signika-Medium';
+	font-style  : normal;
+	font-weight : normal;
+	src         : local('Signika-Medium'), url('signika/Signika-Medium.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-LightCondensed';
+	font-family : 'Signika-SemiBold';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-LightCondensed'), url('agenda/agenda-lightcondensed.woff') format('woff');
+	src         : local('Signika-SemiBold'), url('signika/Signika-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-LightExtraCondensed';
+	font-family : 'Signika-Bold';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-LightExtraCondensed'), url('agenda/agenda-lightextracondensed.woff') format('woff');
+	src         : local('Signika-Bold'), url('signika/Signika-Bold.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-LightUltraCondensed';
+	font-family : 'PTSans-Narrow';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-LightUltraCondensed'), url('agenda/agenda-lightultracondensed.woff') format('woff');
+	src         : local('PTSans-Narrow'), url('ptsans/PTSansNarrow-Regular.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-MediumExtraCondensed';
+	font-family : 'PTSans-Narrow-Bold';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-MediumExtraCondensed'), url('agenda/agenda-mediumextracondensed.woff') format('woff');
+	src         : local('PTSans-Narrow-Bold'), url('ptsans/PTSansNarrow-Bold.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-MediumUltraCondensed';
+	font-family : 'Raleway-Bold';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-MediumUltraCondensed'), url('agenda/agenda-mediumultracondensed.woff') format('woff');
+	src         : local('Raleway-Bold'), url('raleway/Raleway-Bold.ttf') format('truetype');
 }
 
 @font-face {
-	font-family : 'Agenda-ThinUltraCondensed';
+	font-family : 'Raleway-SemiBold';
 	font-style  : normal;
 	font-weight : normal;
-	src         : local('Agenda-ThinUltraCondensed'), url('agenda/agenda-thinultracondensed.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-LightItalic';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-LightItalic'), url('agenda/agenda-lightitalic.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-Semibold';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-Semibold'), url('agenda/agenda-semibold.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-Bold';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-Bold'), url('agenda/agenda-bold.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-BoldCondensed';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-BoldCondensed'), url('agenda/agenda-boldcondensed.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-BoldExtraCondensed';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-BoldExtraCondensed'), url('agenda/agenda-boldextracondensed.woff') format('woff');
-}
-
-@font-face {
-	font-family : 'Agenda-BoldUltraCondensed';
-	font-style  : normal;
-	font-weight : normal;
-	src         : local('Agenda-BoldUltraCondensed'), url('agenda/agenda-boldultracondensed.woff') format('woff');
+	src         : local('Raleway-SemiBold'), url('raleway/Raleway-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
