--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -540,7 +540,7 @@ form.signin input[type="submit"] {
 	padding               : 6px 6px 4px;
 	margin-top            : 8px;
 	margin-left           : 4px;
-	font                  : Agenda-LightCondensed;
+	font                  : Signika-Light;
 	font-size             : 12pt;
 	font-weight           : bold;
 	text-align            : right;
@@ -557,7 +557,7 @@ form.signin input[type="submit"]:hover {
 
 #toprow a.forgot,
 a.forgot {
-	font-family    : Agenda-MediumExtraCondensed;
+	font-family    : Signika-Bold;
 	letter-spacing : 1.1px;
 	font-size      : 18px;
 	font-weight    : bold;
@@ -761,7 +761,7 @@ a.confirm.buttonwhite.full {
 
 button {
 	font-size     : 14px;
-	font-family   : Agenda-Black;
+	font-family   : Signika-Bold;
 	width         : 20px;
 	height        : 20px;
 	padding       : 0;
@@ -813,9 +813,8 @@ input[type="submit"],
 input[type="button"] {
 	color          : #fefefe;
     cursor         : pointer !important;
-	font-family    : Agenda-BoldCondensed;
+	font-family    : Signika-Bold;
 	font-weight    : 900;
-	letter-spacing : 1px;
 	font-size      : 120%;
 	padding-left   : 6px;
 	padding-right  : 6px;
@@ -1462,9 +1461,10 @@ p.times {
 }
 
 h1 {
-	font-family    : Agenda-BoldExtraCondensed;
+	font-family    : PTSans-Narrow-Bold;
 	text-align     : left;
-	font-size      : 4em;
+	letter-spacing : .2px;
+	font-size      : 3.4em;
 	padding        : 4px;
 	margin-left    : 4px;
 	margin-right   : 4px;
@@ -1474,7 +1474,7 @@ h1 {
 }
 
 h2 {
-	font-family    : Agenda-BoldExtraCondensed;
+	font-family    : PTSans-Narrow-Bold;
     font-size      : 3.6em;
 	text-transform : uppercase;
     line-height    : 36px;
@@ -1503,8 +1503,8 @@ h2.martop {
 }
 
 h3 {
-	font-family    : Agenda-BoldExtraCondensed;
-    font-size      : 3.2em;
+	font-family    : PTSans-Narrow-Bold;
+    font-size      : 3em;
 	font-weight    : 600;
 	text-transform : uppercase;
 	padding-left   : 4px;
@@ -1516,8 +1516,8 @@ h3 {
 }
 
 h4 {
-	font-family    : Agenda-BoldExtraCondensed;
-    font-size      : 3em;
+	font-family    : PTSans-Narrow-Bold;
+    font-size      : 2em;
 	padding-left   : 4px;
 	padding-top    : 8px;
 	padding-bottom : 2px;
@@ -1537,7 +1537,7 @@ div.h4 {
 }
 
 h5 {
-	font-family    : Bitter;
+	font-family    : PTSans-Narrow-Bold;
 	font-weight    : 600;
 	font-size      : 1.6em;
 	padding-right  : 0;
@@ -1549,7 +1549,7 @@ h5 {
 }
 
 h6 {
-	font-family    : Bitter;
+	font-family    : PTSans-Narrow-Bold;
 	font-size      : 1.3em;
 	letter-spacing : .5px;
 	font-weight    : 500;
@@ -2670,7 +2670,8 @@ a.buttonwhite {
     padding         : 6px;
     margin          : 2px;
 	vertical-align  : middle;
-	font-family     : Agenda-Bold;
+	font-family     : Raleway-Bold;
+	letter-spacing  : .7px;
 	font-size       : 18px;
     border-radius   : 4px;
 }
@@ -3207,7 +3208,7 @@ span.buttonwhite.fa-sm.thinner:hover {
 .buttonwhite.thinner,
 .buttonwhite.thinner:hover,
 .buttonwhite.thinner.invert {
-	font-family   : Agenda-Light;
+	font-family   : Signika-Light;
 	font-size     : 11pt;
 	letter-spacing: 1px;
 	border-width  : 1px;
@@ -3217,7 +3218,7 @@ span.buttonwhite.fa-sm.thinner:hover {
 }
 
 .buttonwhite.thinner.semibold {
-	font-family : Agenda-BoldCondensed;
+	font-family : PTSans-Narrow-Bold;
 	font-weight : 600;
 	font-size   : 12pt;
 }
@@ -3231,7 +3232,7 @@ span.buttonwhite.fa-sm.thinner:hover {
 	padding       : 3px !important;
 	padding-left  : 4px !important;
 	padding-right : 4px !important;
-	font-family   : Agenda-BoldCondensed;
+	font-family   : Signika-Bold;
 	font-weight   : 400;
 	font-size     : 11pt;
 }
@@ -3782,7 +3783,7 @@ td.slidebox.height {
 .slideshow_command {
 	font-weight    : 600;
 	text-align     : center;
-	font-family    : Agenda-BoldCondensed;
+	font-family    : Signika-Bold;
 	font-variant   : small-caps;
 	font-size      : 18px;
 	height         : 30px;
@@ -3795,7 +3796,7 @@ td.slidebox.height {
 .slideshow_motto {
 	font-variant   : small-caps;
 	display        : inline-block;
-	font-family    : Agenda-BoldCondensed;
+	font-family    : Signika-Bold;
 	font-size      : 18px;
 	height         : 30px;
 	padding-top    : 15px;
@@ -3830,7 +3831,7 @@ td.slidebox.height {
 
 .slideshow_logo {
 	display        : inline-block;
-	font-family    : Agenda-BoldCondensed;
+	font-family    : Signika-Bold;
 	font-size      : 12px;
 	font-weight    : bold;
 	padding-top    : 5px;
@@ -3840,7 +3841,7 @@ td.slidebox.height {
 
 .slideshow_begin {
 	background   : #fdfdfd;
-	font-family  : Agenda-BoldCondensed;
+	font-family  : Signika-Bold;
 	font-weight  : 600;
 	text-align   : center;
 	font-variant : small-caps;
@@ -4167,7 +4168,7 @@ form {
 }
 
 .statustext  {
-	font-family    : Agenda-BoldCondensed;
+	font-family    : Signika-Bold;
     font-size      : 2.7em;
     font-weight    : 700;
 	text-transform : uppercase;
@@ -5162,11 +5163,11 @@ a.fa p {
 }
 
 .sidenote h3 {
-	font-size      : 2.6em;
+	font-size      : 2.2em;
 }
 
 .sidenote h4 {
-	font-size      : 2.4em;
+	font-size      : 2em;
 }
 
 .sidenote h5 {
@@ -5270,7 +5271,7 @@ p.bigger {
 
 .sidenote a.buttonwhite.bigger,
 .sidenote a.button.bigger {
-	font-size   : 13pt !important;
+	font-size   : 11pt !important;
 }
 
 .lowspace p {
@@ -5554,14 +5555,16 @@ way to fit your requirements.
 }
 
 #nav {
-	position    : relative;
-	float       : right;
-	padding     : 0;
-	margin      : 0;
-	list-style  : none;
-	z-index     : 500;
-	font-family : Agenda-Bold;
-	padding-top : 24px;
+	position       : relative;
+	float          : right;
+	padding        : 0;
+	margin         : 0;
+	list-style     : none;
+	z-index        : 500;
+	font-family    : Raleway-Bold;
+	letter-spacing : .5px;
+	font-weight    : 600;
+	padding-top    : 24px;
 }
 
 #nav li.top {
@@ -5581,7 +5584,8 @@ way to fit your requirements.
 	float           : left;
 	color           : #fec92e;
 	text-decoration : none;
-	font-size       : 13pt;
+	font-size       : 15px;
+	letter-spacing  : 1.2px
 	cursor          : pointer;
 	width           : 108px;
 	margin-left     : 5px;
@@ -5653,12 +5657,11 @@ way to fit your requirements.
 }
 
 #nav li:hover ul.sub li a {
-	font-family     : Agenda-Light;
-	font-weight     : 600;
+	font-family     : Raleway-SemiBold;
 	text-align      : center;
 	display         : block;
-	font-size       : 14px;
-	letter-spacing  : 1.2px !important;
+	font-size       : 13px;
+	letter-spacing  : 1.1px !important;
 	width           : 124px;
 	background      : #FFDC7C;
 	color           : #00394d;
