--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1464,7 +1464,7 @@ h1 {
 	font-family    : PTSans-Narrow-Bold;
 	text-align     : left;
 	letter-spacing : .2px;
-	font-size      : 3.4em;
+	font-size      : 4em;
 	padding        : 4px;
 	margin-left    : 4px;
 	margin-right   : 4px;
@@ -1474,8 +1474,10 @@ h1 {
 }
 
 h2 {
-	font-family    : PTSans-Narrow-Bold;
-    font-size      : 3.6em;
+	font-family    : PTSans-Narrow;
+    font-size      : 3.5em;
+	font-weight    : 600;
+	letter-spacing : 1px;
 	text-transform : uppercase;
     line-height    : 36px;
 	margin-top     : 0;
@@ -1517,7 +1519,7 @@ h3 {
 
 h4 {
 	font-family    : PTSans-Narrow-Bold;
-    font-size      : 2em;
+    font-size      : 2.6em;
 	padding-left   : 4px;
 	padding-top    : 8px;
 	padding-bottom : 2px;
@@ -1537,9 +1539,10 @@ div.h4 {
 }
 
 h5 {
-	font-family    : PTSans-Narrow-Bold;
+	font-family    : PTSans-Narrow;
+	letter-spacing : .7px;
 	font-weight    : 600;
-	font-size      : 1.6em;
+	font-size      : 1.8em;
 	padding-right  : 0;
 	padding-left   : 2px;
 	padding-top    : 4px;
@@ -1549,8 +1552,8 @@ h5 {
 }
 
 h6 {
-	font-family    : PTSans-Narrow-Bold;
-	font-size      : 1.3em;
+	font-family    : PTSans-Narrow;
+	font-size      : 1.5em;
 	letter-spacing : .5px;
 	font-weight    : 500;
 	padding-left   : 2px;
