--- a/client/src/common/header.module.css
+++ b/client/src/common/header.module.css
@@ -143,10 +143,12 @@
 }
 
 #nav {
-	padding     : 0;
-	margin      : 0;
-	list-style  : none;
-	font-family : Agenda-Bold;
+	padding        : 0;
+	margin         : 0;
+	list-style     : none;
+	font-family    : Raleway-Bold;
+	letter-spacing : .5px;
+	font-weight    : 600;
 }
 
 #nav li.top {
@@ -166,7 +168,8 @@
 	float           : left;
 	color           : #fec92e;
 	text-decoration : none;
-	font-size       : 13pt;
+	font-size       : 15px;
+	letter-spacing  : 1.2px;
 	cursor          : pointer;
 	width           : 102px;
 	margin-left     : 5px;
@@ -234,7 +237,7 @@
 }
 
 #nav li:hover ul.sub li a {
-	font-family     : Agenda-Light;
+	font-family     : Raleway;
 	font-weight     : 600;
 	text-align      : center;
 	display         : block;
