--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,21 +65,21 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-family    : Agenda-BoldExtraCondensed;
+	font-family    : PTSans-Narrow-Bold;
 	text-align     : left;
 	font-size      : 4em;
 	text-transform : uppercase;
 }
 
 h2 {
-    font-family    : Agenda-BoldExtraCondensed;
+    font-family    : PTSans-Narrow;
     font-size      : 3.6em;
     text-transform : uppercase;
     line-height    : 36px;           
 }
 
 h3 { 
-	font-family    : Agenda-BoldExtraCondensed;
+	font-family    : PTSans-Narrow-Bold;
     font-size      : 3.2em;
 	font-weight    : 600;
 	text-transform : uppercase;
@@ -87,7 +87,7 @@ h3 {
 }
 
 h4 {
-	font-family    : Agenda-BoldExtraCondensed;
+	font-family    : PTSans-Narrow-Bold;
     font-size      : 3em;
 }
 
@@ -188,7 +188,7 @@ span.twothirds {
     padding         : 6px;
     margin          : 0px;
     vertical-align  : middle;
-    font-family     : Agenda-Bold;
+    font-family     : Signika-Bold;
     font-size       : 18px;
     border-radius   : 4px;
 	color           : #fcfcfc;
