--- a/client/src/index.css
+++ b/client/src/index.css
@@ -194,3 +194,16 @@ span.twothirds {
 	color           : #fcfcfc;
 	background-color: #016F94;
 }
+
+.bluetext {
+	color            : #016F94;
+}
+
+.greentext {
+	color            : #467029;
+}
+
+.orangetext {
+	color            : #F05123;
+}
+
