barfPlease.  Table module works.

--- a/client/src/common/Layout.module.css
+++ b/client/src/common/Layout.module.css
@@ -4,10 +4,24 @@
 	min-width : 1000px;
 }
 
+#wrapper { 
+	background-color : #e5ebed;
+	width     : 100%;
+}
+
 #main {
 	background-color : #fefefe;
-	margin           : 0;
-	padding          : 2%;
-	min-height       : 108vh
+	display    : inline-block;
+	margin     : 0;
+	padding    : .5%;
+	min-height : 108vh;
+	width      : 75%;
+}
+
+#menu { 
+	display          : inline-block;
+	vertical-align   : top;
+	width            : 23.5%;
+	height           : 100vh;
 }
 
