Minor bugs with major PITA people

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2197,6 +2197,10 @@ tr.borderbottom td, tr.borderbottom th {
 	border-top: 2px solid #016F94;
 }
 
+.blueborderright {
+	border-right: 1px solid #016F94;
+}
+
 .thinborder {
 	border-width        : 1px;
 }
