css editor tweak

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1211,6 +1211,11 @@ select.plain.thinner {
 	width: 2.5em !important;
 }
 
+.tox .tox-editor-header {
+	z-index: 0;
+}
+
+
 .half .tox .tox-tbtn,
 .twothirds .tox .tox-tbtn {
 	height        : 20px !important;
