Minor tweak for things that annoyethed me

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5,13 +5,13 @@
 
     --background-white     : #fefefe;
 	--background-blue      : #009CD4;
-	--background-yellow    : #fcefc0;
 	--background-cool-gray : #e5ebed;
 
-	--lightest-gray   : #fafafa;
+	--lightest-gray : #fafafa;
 	--lightest-red  : #faedea;
 	--lightest-blue : #eaf3fb;
 
+	--light-yellow : #fcefc0;
 	--light-green  : #C0E2A8;
 	--light-gray   : #eaeaea;
 	--light-red    : #EBC5BF;
@@ -258,7 +258,7 @@ img.badgetiny {
     -moz-box-shadow       : 0 0 4px #222;
     -webkit-box-shadow    : 0 0 4px #222;
     box-shadow            : 0 0 4px #222;
-	background-color      : var(--background-yellow);
+	background-color      : var(--light-yellow);
     opacity               : 0;
     white-space           : pre;
     z-index               : 99999;
@@ -322,7 +322,7 @@ img.badgetiny {
 
 #toprow a:hover {
 	color            : var(--darker-blue);
-	background-color : var(--background-yellow);
+	background-color : var(--light-yellow);
 }
 
 /* Help button (also added 12px margin-right to search box below) */
@@ -1623,7 +1623,7 @@ tr.fixed td, tr.fixed th {
 }
 
 tr.yellowrow.rotation th {
-	border-top:  6px solid var(--background-yellow);
+	border-top:  6px solid var(--light-yellow);
 }
 
 th {
@@ -1862,15 +1862,10 @@ th.nosort, th.hidesort {
 
 .evenrow,
 .even,
-.evenrow.odd,
-.lighteven {
+.evenrow.odd {
 	background-color : var(--light-gray);
 	border-top       : 1px solid var(--medium-gray);
 	border-bottom    : 1px solid var(--medium-gray);
-}
-
-.evenodd {
-	background-color : #f5f5f5 !important;
 }
 
 tr.odd.evenforce td,
@@ -1933,7 +1928,7 @@ tr.even.oddforce td,
 }
 
 .yellowrow  {
-	background-color : var(--background-yellow);
+	background-color : var(--light-yellow);
 }
 
 .point p {
@@ -2306,14 +2301,14 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 }
 
 .ligrnrow  {
-	background-color : #CAE6B8;
+	background-color : var(--light-green);
 }
 
 .lird, .lirdrow  {
 	background-color : var(--light-red);
 }
 .dkblrow  {
-	background-color : #359CEA;
+	background-color : var(--dark-blue);
 }
 
 /* Link block styling */
@@ -2333,7 +2328,7 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 
 .red:hover, .dkred, .dkrednohover, .redhover:hover {
 	background		: var(--dark-red);
-	color			: #eee;
+	color			: var(--light-gray);
 }
 
 .orange, .dkorange:hover, .orangenohover {
@@ -2352,7 +2347,7 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 }
 
 .blue.even {
-	background : #94BBC9;
+	background : var(--light-blue);
 }
 
 .blue:hover, .dkblue, .dkbluenohover {
@@ -2412,11 +2407,11 @@ td a.white, td a.plain {
 }
 
 .ltyellow {
-	background-color : var(--background-yellow);
+	background-color : var(--light-yellow);
 }
 
 .ltblue {
-	background-color : #edf3f5;
+	background-color : var(--light-blue);
 }
 
 .hover:hover,
@@ -2434,7 +2429,7 @@ td a.white, td a.plain {
 }
 
 .yellowhover:hover {
-	background-color : #FFE996;
+	background-color : var(--light-yellow);
 }
 .ltyellowhover:hover {
 	background-color : #fff4cc;
@@ -4110,7 +4105,7 @@ form {
 
 .statuspick {
 	z-index    : 500;
-	background : var(--background-yellow);
+	background : var(--light-yellow);
 }
 .statushidden {
 	display: none;
@@ -4847,12 +4842,14 @@ a.block {
 	overflow    : hidden;
 	white-space : nowrap;
 }
+
 td.limitthird {
 	width	    : auto;
 	max-width   : 128px;
 	overflow-x  : auto;
 	white-space : normal;
 }
+
 td.limithalf {
 	width	    : auto;
 	max-width   : 256px;
