--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1251,6 +1251,10 @@ select.plain.thinner {
 	margin-bottom : 2px;
 }
 
+.tox .tox-toolbar-overlord {
+	border-bottom: 1px solid var(--neutral-gray);
+}
+
 .half .tox-toolbar__group,
 .twothirds .tox-toolbar__group {
 	padding-left  : 6px !important;
@@ -3478,13 +3482,7 @@ input[type="checkbox"].nospace {
 .linespaced {
 	line-height : 18px;
 }
-.doublespaced {
-	line-height : 24px !important;
-}
-
-.paradigm p {
-	font-size   : 100%;
-	line-height : 24px;
+.doublespine-height : 24px;
 }
 
 .blank {
