Blue where there should be gray.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5341,23 +5341,17 @@ ul.lighter {
 }
 
 ul#tabnav li { /* do not change */
-
 	background-color	: var(--border-gray);
-
 	display				: inline-block;
-
 	padding-top			: 1px;
 	padding-bottom		: 2px;
 	padding-right		: 4px;
 	padding-left		: 4px;
-
-	border				: 1px solid var(--medium-blue);
-
+	border				: 1px solid var(--neutral-gray);
 	margin-top			: 0;
 	margin-left			: 8px;
 	margin-right		: 0; /* set additional spacing between tabs as desired */
 	margin-bottom		: -1px;
-
 }
 
 ul#tabnav li a {
