--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2424,11 +2424,11 @@ td a.white, td a.plain {
 }
 
 .ltyellow {
-	background-color : var(--light-yellow);
+	background-color : var(--lightest-yellow);
 }
 
 .ltblue {
-	background-color : var(--light-blue);
+	background-color : var(--lightest-blue);
 }
 
 .hover:hover,
