Manual rooms fix

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2302,9 +2302,12 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 }
 
 /*Coloring*/
-.lirdrow .odd, .lirdrow.odd,
-.lird .odd, .lird.odd,
-.redrow .odd, .redrow.odd {
+.lirdrow .odd,
+.lirdrow.odd,
+.lird .odd,
+.lird.odd,
+.redrow .odd,
+.redrow.odd {
 	background-color : var(--lightest-red);
 }
 
@@ -2318,6 +2321,11 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 	background-color : var(--light-red);
 }
 
+.lird, .lirdrow  {
+	background-color : var(--lightest-red);
+	color            : var(--darker-red);
+}
+
 .orangerow {
 	background : var(--light-orange);
 }
@@ -2326,9 +2334,6 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 	background-color : var(--light-green);
 }
 
-.lird, .lirdrow  {
-	background-color : var(--light-red);
-}
 .dkblrow  {
 	background-color : var(--dark-blue);
 }
