--- a/client/static/css/tabroom.css
+++ b/client/static/css/tabroom.css
@@ -15,7 +15,6 @@
  * -- CLP 
  */
 
-
 :root {
 
     --background-white : #fefefe;
@@ -77,7 +76,6 @@ body {
 	margin              : 0;
 }
 
-
 h1 {
 	font-family    : PTSans-Narrow-Bold;
 	text-align     : left;
@@ -125,4 +123,164 @@ h4 {
 	padding-bottom : 2px;
 	margin-top     : 4px;
 	margin-bottom  : 7px;
+}
+
+.semibold {
+	font-weight: 600;
+}
+
+/* Building Blocks */
+
+.sidenote {
+	display             : block;
+	width               : 88%;
+	font-size           : 12px;
+	min-height          : 32px;
+	line-height         : 16px;
+	margin              : auto;
+	margin-top          : 16px;
+	margin-bottom       : 4px;
+	padding             : 8px;
+	background-color    : var(--background-white);
+	background-position : right top;
+	background-repeat   : no-repeat;
+	border-width        : 1.2x;
+	border-style        : solid;
+	border-color        : var(--medium-gray);
+	border-radius       : 4px;
+}
+
+.sidenote h3,
+.sidenote h4,
+.sidenote h5 {
+	padding-left   : 2px;
+	padding-top    : 8px;
+	letter-spacing : 1px;
+	line-height    : 22px;
+	font-weight    : 600;
+	text-transform : none;
+}
+
+.sidenote h3 {
+	font-size      : 2.2em;
+}
+
+.sidenote h4 {
+	font-size      : 2em;
+}
+
+.sidenote h5 {
+	font-size      : 1.6em;
+	letter-spacing : .44px;
+}
+
+.sidenote h6 {
+	font-size      : 1.6em;
+	letter-spacing : .64px;
+	padding-left   : 2px;
+	padding-top    : 8px;
+}
+
+.sidenote a {
+	text-decoration : none;
+	display         : inline-block;
+	font-size       : 11px;
+	text-align      : left;
+	line-height     : 16px;
+}
+
+
+/* Positional element generic sizing */
+
+	#main {
+		float            : left;
+		width            : 71%;
+		background-color : var(--background-white);
+		padding          : 2%;
+		padding-top      : 16px;
+		padding-bottom   : 16px;
+		margin           : 0;
+		min-height       : 600px;
+		min-height       : 108vh;
+	}
+
+	#mainfull {
+		float : none;
+		width : 96%;
+	}
+
+	#menu {
+		width    : 25%;
+		float    : right;
+		margin   : 0;
+		padding  : 0;
+		position : relative;
+	}
+
+	#sideoverlay {
+		position         : absolute;
+		left             : 25%;
+		top              : 16px;
+		width            : 50%;
+		background-color : var(--background-white);
+		padding          : 32px 16px 64px;
+		border           : 12px solid var(--dark-blue);
+	}
+
+/** Svelte makes it somewhat difficult to scope CSS downwards into child
+ * components and the two threads I found about adding support for it easily
+ * turned into mod hell, so I'm just sticking more here than I expected. Sorry.
+ **/
+
+
+#toprow {
+	display        : block;
+	width          : 69%;
+	min-width      : 580px;
+	float          : right;
+	text-align     : right;
+	padding-top    : 8px;
+	padding-bottom : 8px;
+	letter-spacing : .2px;
+	margin         : 0;
+}
+
+#toprow a {
+	display         : inline-block;
+	border-left     : 2px solid rgba(255, 255, 255, 0.14);
+	color           : rgba(255, 255, 255, 0.64);
+	margin          : 0;
+	padding         : 6px;
+	padding-left    : 8px;
+	padding-right   : 8px;
+	text-decoration : none;
+	font-size       : 12px;
+	font-weight     : 600;
+}
+
+#toprow a.borderright {
+	border-right     : 2px solid rgba(255, 255, 255, 0.14);
+}
+
+#toprow a.fa {
+	font-size      : 16pt;
+	font-weight    : 400;
+	margin-bottom  : 0;
+	padding-top    : 4px;
+	padding-bottom : 4px;
+}
+
+#toprow a:hover {
+	color            : var(--darker-blue);
+	background-color : var(--light-yellow);
+}
+
+
+/* Resetting Functionality */
+
+div:after {
+	clear   : both;
+	content : "";
+	display : block;
+	height  : 0;
 }
