--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -421,10 +421,6 @@ button::-moz-focus-inner{
 	opacity : 1;
 }
 
-.login-window {
-	font-weight		: bold;
-}
-
 .notmask {
 	z-index : 100;
 }
@@ -451,69 +447,32 @@ button::-moz-focus-inner{
 	z-index    : 10;
 }
 
-.login {
-	display        : inline-block;
-	position       : relative;
-	padding        : 0;
-	vertical-align : top;
-	margin-top     : 8px;
-}
-.signup {
-	margin-top     : 8px;
-}
-
-.signup_message strong, .signup_message .strong {
-	font-weight: 600;
-}
-.signup_message p {
-	line-height: 18px;
-	margin-top: 16px;
-}
-
-.login-popup {
+#toprow .login-popup {
 	display                   : none;
 	position                  : absolute;
 	background                : var(--light-gray);
 	padding                   : 10px;
 	margin-top                : 4px;
-	border                    : 4px solid var(--background-white);
-	font-size                 : 1.2em;
+	border                    : 4px solid var(--dark-blue);
 	z-index                   : 99999;
-	box-shadow                : 0 0 20px var(--medium-gray); /* CSS3 */
-        -moz-box-shadow       : 0 0 20px var(--medium-gray); /* Firefox */
-        -webkit-box-shadow    : 0 0 20px var(--medium-gray); /* Safari, Chrome */
-	border-radius             : 3px 3px 3px 3px;
-        -moz-border-radius    : 3px; /* Firefox */
-        -webkit-border-radius : 3px; /* Safari, Chrome */
+	box-shadow                : 0 0 20px var(--medium-gray);
+	border-radius             : 3px;
 	width                     : 256px;
 }
 
-.login-popup h4 {
-	text-align     : left;
-	font-size      : 1.4em;
-}
-
-
-#toprow .login-popup a.redtext {
-	color           : var(--dark-red);
-	text-decoration : underline;
-}
-
-span.signup {
-	display        : inline-block;
-	position       : relative;
-	padding        : 0;
-	vertical-align : top;
-}
-
-#toprow span.signup a, #toprow span.login a {
+#toprow a {
 	padding-left   : 8px;
 	padding-right  : 8px;
 	padding-top    : 6px;
 	padding-bottom : 6px;
 }
 
-#toprow span.login a.close {
+#toprow a.redtext {
+	color           : var(--dark-red);
+	text-decoration : underline;
+}
+
+#toprow a.close {
 	display      : block;
 	float        : right;
 	color        : var(--darker-blue);
@@ -523,11 +482,7 @@ span.signup {
 	font-size    : 1.4em;
 }
 
-img.btn_close {
-	width        : 20px;
-}
-
-span.pokemon {
+#toprow span.pokemon {
 	min-width           : 150px;
 	min-height          : 25px;
 	text-align          : center;
@@ -536,85 +491,38 @@ span.pokemon {
 	background-position : 0 -10px;
 }
 
-fieldset {
-	border : none;
+#login-box input[type="text"],
+#login-box input[type="password"] {
+	border-bottom : 1px solid var(--dark-gray);
+	border-left   : 1px solid var(--darker-gray);
+	border-right  : 1px solid var(--dark-gray);
+	border-top    : 1px solid var(--darker-gray);
+	color         : var(--darker-blue);
+    border-radius : 4px;
+	font          : 15px "Inconsolata";
+	padding       : 8px 8px 4px;
+	margin-top    : 6px;
+	margin-bottom : 6px;
+	width         : 84%;
 }
 
-.textbox {
-	text-align: center;
+#login-box input[type="submit"] {
+	background-color : var(--darker-blue);
+	font             : 16px "Inconsolata";
+	font-weight      : 600;
+	color            : var(--background-white);
+	padding-top      : 8px;
+	padding-bottom   : 8px;
+	padding-right    : 16px;
+	margin-top       : 8px;
+	text-align       : right;
 }
-
-form.signin .textbox label {
-	display        : block;
-}
-
-form.signin .textbox span {
-	display:block;
-}
-
-form.signin p, form.signin span {
-	color       : var(--light-gray);
-	font-size   : 12pt;
-	line-height : 18px;
-}
-
-form.signin .textbox input {
-	background            : var(--background-white);
-	border-bottom         : 1px solid var(--dark-gray);
-	border-left           : 1px solid var(--darker-gray);
-	border-right          : 1px solid var(--dark-gray);
-	border-top            : 1px solid var(--darker-gray);
-	color                 : var(--darker-blue);
-    border-radius         : 4px 4px 4px 4px;
-	-moz-border-radius    : 4px;
-    -webkit-border-radius : 4px;
-	font                  : 14px "Inconsolata";
-	padding               : 8px 8px 4px;
-	margin-bottom         : 6px;
-	width                 : 200px;
-}
-
-form.signin input:-moz-placeholder {
-	color : var(--darker-blue);
-}
-
-form.signin input::-webkit-input-placeholder {
-	color : var(--darker-blue);
-}
-
-form.signin input[type="submit"] {
-	color                 : var(--background-white);
-	background            : var(--darker-blue);
-    border-radius         : 4px 4px 4px 4px;
-	-moz-border-radius    : 4px;
-    -webkit-border-radius : 4px;
-	cursor                : pointer;
-	display               : inline-block;
-	padding               : 6px 6px 4px;
-	margin-top            : 8px;
-	margin-left           : 4px;
-	font                  : Signika-Light;
-	font-size             : 12pt;
-	font-weight           : bold;
-	text-align            : right;
-	padding-right         : 16px;
-	width                 : 216px;
-	border                : 1px solid var(--darker-blue);
-}
-
-form.signin input[type="submit"]:hover {
-	background : var(--lightest-blue);
-	color      : var(--darker-blue);
-	border     : 1px solid var(--darker-blue);
-}
-
 
 tr.redtext td,
 tr.redtext td span,
 tr.redtext td div {
 	color : var(--dark-red);
 }
-
 
 #wrapper {
 	width      : 88%;
