--- a/web/lib/css/fonts/fonts.css
+++ b/web/lib/css/fonts/fonts.css
@@ -50,7 +50,7 @@
 
 @font-face {
     font-family : 'Inconsolata';
-    src         : url('inconsolata/Inconsolata-webfont.woff') format('woff'),
+    src         : url('inconsolata/Inconsolata-Regular.woff2') format('woff2'),
 				  url('inconsolata/Inconsolata-webfont.ttf') format('truetype');
     font-weight : normal;
     font-style  : normal;
