--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -329,6 +329,54 @@ img.badgetiny {
 	font-weight     : 600;
 }
 
+#toprow a.greentext:hover,
+#toprow a.redtext:hover {
+	border           : 1px solid var(--dark-red);
+	background-color : var(--light-yellow);
+	color            : var(--light-orange);
+}
+
+#toprow a.greentext.pushed,
+#toprow a.redtext.pushed {
+	background-color : var(--lightest-gray);
+	border           : 1px solid var(--medium-blue);
+	border-bottom    : 1px solid var(--lightest-gray);
+	color            : var(--neutral-gray);
+}
+
+#push-subscribe {
+	float            : right;
+	background-color : var(--lightest-gray);
+	width            : 97%;
+	text-align       : center;
+	padding          : 8px;
+	margin-top       : -5px;
+	border           : none;
+	border-right     : 1px solid var(--dark-blue);
+}
+
+#toprow-push-box {
+	min-height: 0;
+}
+
+p.onesignal-customlink-explanation.medium {
+	font-size      : 12pt;
+	line-height    : 14pt;
+	padding-top    : 2px;
+	padding-bottom : 2px;
+}
+
+#toprow a.redtext {
+	border : 1px solid var(--light-red);
+	color  : var(--medium-red);
+}
+
+#toprow a.greentext {
+	color  : var(--medium-green);
+	border : 1px solid var(--medium-green);
+}
+
+
 #toprow a.borderright {
 	border-right     : 2px solid rgba(255, 255, 255, 0.14);
 }
@@ -467,7 +515,7 @@ button::-moz-focus-inner{
 	padding-bottom : 6px;
 }
 
-#toprow a.redtext {
+#login-box #toprow a.redtext {
 	color           : var(--dark-red);
 	text-decoration : underline;
 }
@@ -526,7 +574,6 @@ tr.redtext td div {
 
 #wrapper {
 	width      : 88%;
-	min-width  : 970px;
 	max-width  : 1536px;
 	min-height : 650px;
 	margin     : auto;
@@ -540,7 +587,6 @@ tr.redtext td div {
 	background-color : var(--lightest-cool-gray);
 	margin           : 0;
 	padding          : 0;
-	min-width        : 1180px;
 }
 
 .nomenu div.main {
@@ -652,9 +698,36 @@ sup {
 	vertical-align : super;
 }
 
+
+button.medium {
+	font-family   : Signika-Light;
+    opacity       : .8;
+	font-size     : 15px;
+	height        : auto;
+	width         : auto;
+	color         : var(--background-white);
+	border-radius : 4px;
+    cursor        : pointer;
+    padding       : 8px 16px;
+    display       : inline-block;
+	font-weight   : 600;
+    touch-action  : manipulation;
+}
+
+button.medium:hover {
+	opacity : 1;
+	color   : var(--background-white);
+}
+
+button.medium.red {
+	background-color: var(--dark-red);
+	border: 1px solid var(--medium-red);
+}
+
 .confirm {
 	border-width : 8px !important;
 }
+
 a.confirm.buttonwhite.full {
 	font-size: 16pt;
 }
@@ -6591,7 +6664,6 @@ p.reason {
 		background-color : var(--lightest-cool-gray);
 		margin           : 0;
 		padding          : 0;
-		min-width        : 870px;
 	}
 
 	.main {
@@ -6709,7 +6781,6 @@ p.reason {
 		background-color : var(--lightest-cool-gray);
 		margin           : 0;
 		padding          : 0;
-		min-width        : 700px;
 	}
 
 	.main {
